[package]
name = "internetdb_checker"
version = "0.1.2"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26"
trust-dns-resolver = "0.20"
uuid = { version = "0.8", features = ["v4"] }
bs58 = "0.4"
tokio = { version = "1", features = ["full"] }
